--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,6 +21,7 @@ intel-mkl-src = {version="0.8.1", optional = true}
 cudarc = {version="0.10.0", optional = true}
 candle-onnx = {version="0.4.1", optional = true}
 rand = "0.8.5"
+half = "2.4.0"
 
 [build-dependencies]
 bindgen_cuda = { version = "0.1.1", optional = true }
